--- a/spring_workbook/CH4/springex/src/main/webapp/resources/test.html
+++ b/spring_workbook/CH4/springex/src/main/webapp/resources/test.html
@@ -1,8 +1,3 @@
-<%--<%@ page contentType="text/html;charset=UTF-8" language="java" %>--%>
-<%@ page contentType="text/html;charset=UTF-8" pageEncoding="UTF-8" %>
-
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -49,48 +44,18 @@
                         Featured
                     </div>
                     <div class="card-body">
-                        <form action="/todo/register" method="post">
-                            <div class="input-group mb-3">
-                                <span class="input-group-text">Title</span>
-                                <input type="text" name="title" class="form-control" placeholder="Title">
-                            </div>
-
-                            <div class="input-group mb-3">
-                                <span class="input-group-text">DueDate</span>
-                                <input type="date" name="dueDate" class="form-control" placeholder="Writer">
-                            </div>
-
-                            <div class="input-group mb-3">
-                                <span class="input-group-text">Writer</span>
-                                <input type="text" name="writer" class="form-control" placeholder="Writer">
-                            </div>
-
-                            <div class="my-4">
-                                <div class="float-end">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                    <button type="result" class="btn btn-secondary">Reset</button>
-                                </div>
-                            </div>
-                        </form>
-
-                        <%-- 에러메세지 확인 --%>
-                        <script>
-                            const serverValidResult = {}
-                            <c:forEach items="${errors}" var="error">
-                            serverValidResult['${error.getField()}'] = '${error.defaultMessage}'
-                            </c:forEach>
-                            console.log(serverValidResult)
-                        </script>
-
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
-
                 </div>
             </div>
         </div>
 
     </div>
     <div class="row content">
-<%--        <h1>Content</h1>--%>
+
+<!--        <h1>Content</h1>-->
     </div>
     <div class="row footer">
         <!--<h1>Footer</h1>-->
@@ -104,6 +69,21 @@
     </div>
 </div>
 
+
+
+<!--<h1>Hello, world</h1>-->
+
+<!--<div class="container-fluid">-->
+<!--    <div class="row">-->
+<!--        <h1>Header</h1>-->
+<!--    </div>-->
+<!--    <div class="row content">-->
+<!--        <h1>Content</h1>-->
+<!--    </div>-->
+<!--    <div class="row footer">-->
+<!--        <h1>Footer</h1>-->
+<!--    </div>-->
+<!--</div>-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
